# compress-pdf

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: build_exe.py  make_launcher.py
src/compress_pdf/: app.py
