[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compress-pdf"
version = "0.1.0"
description = "GUI to recursively compress PDF with Ghostscript"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[project.scripts]
compress-pdf = "compress_pdf.app:main"
